# pickle-bot

./: CLAUDE.md  README.md  pyproject.toml  test_layered_prompts.py
default_workspace/: AGENTS.md  BOOTSTRAP.md  config.user.yaml
docs/: architecture.md  channel-setup.md  configuration.md  features.md
docs/plans/: 2026-02-26-cli-messagebus-design.md  2026-02-26-cli-messagebus.md  2026-02-27-config-hot-reload-impl.md  2026-02-28-typed-events-design.md  2026-02-28-typed-events-impl.md  2026-02-28-unified-worker-architecture-design.md  2026-02-28-unified-worker-architecture.md  2026-03-01-class-based-events.md  2026-03-01-event-system-refactor-design.md  2026-03-01-event-system-refactor.md  2026-03-01-message-routing-design.md  2026-03-01-session-source-design.md  2026-03-01-session-source.md  2026-03-01-test-cleanup-design.md  2026-03-01-test-cleanup-impl.md  2026-03-02-chat-tui-design.md  2026-03-02-chat-tui-implementation.md  2026-03-02-context-guard-design.md  2026-03-02-context-guard-implementation.md  2026-03-02-default-delivery-source-design.md  2026-03-02-default-delivery-source.md  2026-03-02-default-routing-design.md  2026-03-02-default-routing-impl.md  2026-03-02-delivery-retry-design.md  2026-03-02-delivery-retry.md  2026-03-02-eventsource-refactor-design.md  2026-03-02-eventsource-refactor.md  2026-03-02-multi-layer-prompt-implementation.md  2026-03-03-chat-command-redesign-design.md  2026-03-03-chat-command-redesign.md  2026-03-03-layered-workspace-design.md  2026-03-03-layered-workspace.md  2026-03-03-session-state-refactoring.md  2026-03-04-cli-agent-selection-design.md  2026-03-05-messagebus-to-channel-rename-design.md  2026-03-05-messagebus-to-channel-rename.md  2026-03-05-test-cleanup-design.md  2026-03-05-websocket-integration-design.md  2026-03-06-consolidate-session-management-design.md  2026-03-06-session-aware-commands-implementation.md
tests/: conftest.py  helpers.py  test_context_guard.py
tests/api/: test_agents.py  test_config.py  test_schemas.py  test_sessions.py
tests/channel/: test_base.py  test_discord_channel.py  test_telegram_channel.py
tests/cli/: conftest.py  test_chat_integration.py  test_server.py
tests/core/: test_agent.py  test_agent_events.py  test_agent_loader.py  test_context.py  (+10 more)
(+94 files in other folders)
