[project]
name = "pickle-bot"
version = "1.0.0"
description = "Personal AI assistant with pluggable skills"
readme = "README.md"
authors = [
    { name = "zane", email = "czl970721@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ai", "assistant", "llm", "chatbot"]
requires-python = ">=3.13"
dependencies = [
  "litellm>=1.0.0",
  "typer>=0.12.0",
  "textual>=0.21.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "croniter>=1.0.0",
  "python-telegram-bot>=20.0",
  "discord.py>=2.0",
  "questionary>=2.0.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "crawl4ai>=0.4.0",
  "watchdog>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/zane-chen/pickle-bot"
Repository = "https://github.com/zane-chen/pickle-bot"
Issues = "https://github.com/zane-chen/pickle-bot/issues"

[project.scripts]
picklebot = "picklebot.cli.main:app"

[tool.uv.sources]

[project.optional-dependencies]
dev = [
  "types-pyyaml",
  "types-croniter",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.15.1",
  "mypy>=1.19.1",
  "bump-my-version>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/picklebot"]

[tool.bumpversion]
current_version = "1.0.0"
parse = """(?x)
  (?P<major>0|[1-9]\\d*)\\.
  (?P<minor>0|[1-9]\\d*)\\.
  (?P<patch>0|[1-9]\\d*)
"""
serialize = [
  "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.pytest.ini_options]
pythonpath = "src"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
